--- a/API/src/main/java/com/comze_instancelabs/minigamesapi/messages.properties
+++ b/API/src/main/java/com/comze_instancelabs/minigamesapi/messages.properties
@@ -1,2 +1,40 @@
 Arena.BoundariesInvalid=&cThe boundaries of an arena appear to be invalid (missing world?), please fix\! Arena: %0$s 
 Arena.SaveFailedBoundaries=&cFailed to save arenas as you forgot to set boundaries or they could not be found. This will lead to errors later, please fix your setup. %0$s 
+MinigamesAPI.AllSignsUpdated=§aAll signs updated\!
+MinigamesAPI.CannotFindParticleEffect=§cCouldn't find particle effect.
+MinigamesAPI.DebugAllPlayers=~ All players for %0$s: 
+MinigamesAPI.DebugAllPlayersLine=§7 %0$s %1$s %2$s
+MinigamesAPI.DebugArenas=~ Arenas: 
+MinigamesAPI.DebugArenasLine=\ %0$s - %1$s
+MinigamesAPI.DebugGlobalLost=~ global_lost: 
+MinigamesAPI.DebugGlobalLostLine=\ %0$s
+MinigamesAPI.DebugGlobalPlayers=~ global_players: 
+MinigamesAPI.DebugGlobalPlayersLine=\ %0$s
+MinigamesAPI.DebugInfoHeader=Debug info about 
+MinigamesAPI.DebugSpectatorManager=~ SpectatorManager: 
+MinigamesAPI.DebugSpectatorManagerLine=\ %0$s 
+MinigamesAPI.ExecuteIngame=Please execute this command ingame.
+MinigamesAPI.ListArenasLine=~ %0$s: %1$d Arenas
+MinigamesAPI.MgApiSubcommandDebug=/mapi debug
+MinigamesAPI.MgApiSubcommandHologram=/mapi hologram
+MinigamesAPI.MgApiSubcommandInfo=/mapi info <player>
+MinigamesAPI.MgApiSubcommandList=/mapi list
+MinigamesAPI.MgApiSubcommandPotionEffect=/mapi <potioneffect>
+MinigamesAPI.MgApiSubcommands=§6Subcommands: 
+MinigamesAPI.MgApiSubcommandSigns=/mapi signs - Update all signs
+MinigamesAPI.MgApiSubcommandStatsHologram=/mapi setstatshologram
+MinigamesAPI.MgApiSubcommandSubtitle=/mapi subtitle <subtitle>
+MinigamesAPI.MgApiSubcommandTitle=/mapi title <title>
+MinigamesAPI.MinigamesLibHeader=§6§lMinigamesLib <3 %0$s
+MinigamesAPI.NoMinigamesFound=~ No installed minigames found\! Download/Install some from the project page.
+MinigamesAPI.NoPermissionForStart=§c§lYou are not allowed to use command /start.
+MinigamesAPI.PlayingHologram=Playing hologram.
+MinigamesAPI.PlayingStatsHologram=Playing statistics hologram.
+MinigamesAPI.PluginArenaCount=~ §7 %0$s: §f%1$d Arenas
+MinigamesAPI.SetDebugMode=§6Debug mode is now: %0$s
+MinigamesAPI.Started=started
+MinigamesAPI.StartNotWithinArena=§c§lYou are not within any arena. Nothing found to start.
+MinigamesAPI.StatsDeaths=Deaths: 
+MinigamesAPI.StatsKills=Kills: 
+MinigamesAPI.StatsPotions=Potions: 
+MinigamesAPI.StatsWins=Wins: 
